--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body onresize="mudTama()">
     <header>
-        <h1>Club de Regatas Vasco da Gama</h1>
+        <h1>Club de Regatas <br> Vasco da Gama</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()"> menu</span>
         <menu id="hamenu"> 
             <ul>
